--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
 
 
 </head>
@@ -27,7 +27,7 @@
     <!-- Nav bar ------------------------------------------------------------>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><a><img class ="logo" src="favicon.png"></a>
+        <a class="navbar-brand" href="index.html"><a><img class ="logo" src="favicon.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home/About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -52,33 +52,57 @@
     <!-- End Nav bar ------------------------------------------------------->
 
     <div class="container">
+        <!-- <br>
         <br>
-        <br>
-        <br>
+        <br> -->
+        <div class="row">
+            <div class="col-md-6">
+                <img src="final-headshot-for-website.jpg" class="headshot">
+            </div>
 
+            <div class="col-md-6">
+                <br>
+                <br>
+                <br>
+                <h3 class="bio">
+                    Bio: <br>
+                </h3>
+                
+                <p>My name is Robert Greenawalt and I'm a Philadelphia based full-stack web developer who creates websites from scratch. I am looking to work in web development because I love designing new things and working in teams. I am looking to shift my career because I think that web development would suit me very well and I love to learn new things. Check out some of my work in my <a href="portfolio.html">portfolio</a>, add me on <a href="#">LinkedIn</a>, or send me an email through my <a href="contact.html">contact</a> page.
+                </p>
 
-        <br>
-        <p>
-            Hello, <br><br>
-            I'm a Philadelphia based full-stack web developer who creates websites from scratch. Check out some of my
-            recent work below:
-        </p>
+                <p>_________________________________________________________________________________</p>
+
+                <br>    
+                <p>robert.greenawalt29@gmail.com</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliquam! itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliquam! itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliquam! itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliquam! itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua</p>
+            </div>
+
+        </div>
 
     </div>
 
 
     <!-- Footer-------------------------------------------------------------->
 
-    <footer class="footer-1">
+    <footer class="footer-1 footer fixed-bottom">
         <div class="container">
             <div class="footer-content">
                 <ul>
                     <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i class="fab fa-instagram"></i></a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
                                 class="fab fa-linkedin-in"></i></a>
+                    </li>
+
+                    <li>
+                        <a href="https://twitter.com/_broccoli_rob_" target="_blank" ><i class="fab fa-twitter"></i>
                     </li>
 
                 </ul>
