--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
 
 
 </head>
@@ -25,7 +25,7 @@
     <!-- Nav bar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><a><img class ="logo" src="favicon.png"></a>
+        <a class="navbar-brand" href="index.html"><a><img class ="logo" src="favicon.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home/About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -54,48 +54,63 @@
         <div class="row row-cols-1 row-cols-md-2">
             <div class="col mb-4">
                 <div class="card">
-                    <img src="https://picsum.photos/seed/picsum/200" class="card-img-top" alt="...">
+                    <a href="https://rsg71.github.io/MyFirst-HTML/" target="_blank"><img src="https://rsg71.github.io/MyFirst-HTML/key%20west.jpg" class="card-img-top card-1" alt="first website"></a>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">My First Website</h5>
+                        <p class="card-text">This is the first website I created; it will be undergoing future changes as I develop further</p>
                     </div>
                 </div>
             </div>
             <div class="col mb-4">
                 <div class="card">
-                    <img src="https://picsum.photos/seed/picsum/200" class="card-img-top" alt="...">
+                    <a href="https://rsg71.github.io/Code-refactor/" target="_blank"><img src="digital-marketing-meeting.jpg" class="card-img-top" alt="second website for digital marketing company"></a>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Horiseon Social Solution Services</h5>
+                        <p class="card-text">This is a website whose code I edited to include semantic element tags; thereby improving SEO performance and increases accessibility</p>
                     </div>
                 </div>
             </div>
             <div class="col mb-4">
                 <div class="card">
-                    <img src="https://picsum.photos/seed/picsum/200" class="card-img-top" alt="...">
+                    <a href="#" target="_blank"><img src="https://i.picsum.photos/id/1076/4835/3223.jpg?hmac=sw_W2oBUV1Pp_QwMbkODYHgWlX-SOkVRatS_UErh64Q" class="card-img-top" alt="coming soon image"></a>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                        <h5 class="card-title">Coming Soon</h5>
+                        <p class="card-text"> This is a future project that I have not yet completed. I will be filling out links to new websites as the class progresses.</p>
                     </div>
                 </div>
             </div>
             <div class="col mb-4">
                 <div class="card">
-                    <img src="https://picsum.photos/seed/picsum/200" class="card-img-top" alt="...">
+                    <a href="#" target="_blank"><img src="https://i.picsum.photos/id/249/3000/2000.jpg?hmac=U2oOCXdXUwt6ftKMC4icF6eS8dGDUZJM_0-qi0JEqjk" class="card-img-top" alt="coming soon image"></a>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Coming Soon</h5>
+                        <p class="card-text">This is a future project that I have not yet completed. I will be filling out links to new websites as the class progresses./p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <footer>
 
+
+
+    <footer class="footer-1 fixed-bottom">
+        <div class="container">
+            <div class="footer-content">
+                <ul>
+                    <li>
+                        <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+                                class="fab fa-linkedin-in"></i></a>
+                    </li>
+                    
+                    <li>
+                        <a href="https://twitter.com/_broccoli_rob_" target="_blank" ><i class="fab fa-twitter"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
 
