update to headshot, created space for content on all pages above footer

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact | Robert Greenawalt</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -20,69 +20,14 @@
 
 <body>
 
-
-    <!-- Nav bar -->
-
-    <!-- <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav> -->
-
-<!-- 
-
-    <nav class="navbar navbar-light bg-light">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a href="index.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-                <a href="contact.html" class="nav-link">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        </ul>
-    </nav> -->
-
+    <!-- Nav bar ------------------------------------------------------------------------------------->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html"><a><img class ="logo" src="favicon.png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="index.html"><img class="logo" src="favicon.png" alt="my logo">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button></a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
 
@@ -101,54 +46,50 @@
     </nav>
 
 
-    <!-- End Nav bar -->
+    <!-- End Nav bar -------------------------------------------------------------------------------->
 
     <div class="container">
-
         <br>
         <br>
         <h1>Contact</h1>
         <form>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Name:</label>
-                <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
+                <input type="name" class="form-control" class="exampleFormControlInput1" placeholder="John Doe">
             </div>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Email address:</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <input type="email" class="form-control" class="exampleFormControlInput1"
+                    placeholder="name@example.com">
             </div>
 
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Inquiry/Questions/Comments:</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+                <textarea class="form-control" class="exampleFormControlTextarea1" rows="8"></textarea>
             </div>
         </form>
         <input class="btn btn-dark" type="submit" value="Submit">
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
+    <!-- Footer-------------------------------------------------------------->
 
-
-    <footer class="footer-1 fixed-bottom">
+    <footer class="footer">
         <div class="container">
-            <div class="footer-content">
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-                                class="fab fa-linkedin-in"></i></a>
-                    </li>
-                    
-                    <li>
-                        <a href="https://twitter.com/_broccoli_rob_" target="_blank" ><i class="fab fa-twitter"></i>
-                    </li>
-
-                </ul>
-            </div>
+            <span class="text-muted">
+                <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+                <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i>
+            </span>
         </div>
     </footer>
-
+    <!-------------------------------------------------- End Footer ----------------------------->
 
 
 </body>
