--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Homepage | Robert Greenawalt</title>
 
     <!-- bootstrap link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -13,12 +13,11 @@
     <!-- font awesome link for fonts -->
     <script src="https://kit.fontawesome.com/63824e3d3e.js" crossorigin="anonymous"></script>
 
-    <!-- Css link for footer-->
-    <link rel="stylesheet" href="style.css">
-
     <!-- favicon -->
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
 
+    <!-- Css link for footer-->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -27,11 +26,10 @@
     <!-- Nav bar ------------------------------------------------------------>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html"><a><img class ="logo" src="favicon.png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="index.html"><img class="logo" src="favicon.png" alt="my logo">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button></a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
 
@@ -52,12 +50,9 @@
     <!-- End Nav bar ------------------------------------------------------->
 
     <div class="container">
-        <!-- <br>
-        <br>
-        <br> -->
         <div class="row">
             <div class="col-md-6">
-                <img src="final-headshot-for-website.jpg" class="headshot">
+                <img src="headshot-updated-removebg-preview2.png" alt="headshot of Robert" class="headshot">
             </div>
 
             <div class="col-md-6">
@@ -67,51 +62,40 @@
                 <h3 class="bio">
                     Bio: <br>
                 </h3>
-                
-                <p>My name is Robert Greenawalt and I'm a Philadelphia based full-stack web developer who creates websites from scratch. I am looking to work in web development because I love designing new things and working in teams. I am looking to shift my career because I think that web development would suit me very well and I love to learn new things. Check out some of my work in my <a href="portfolio.html">portfolio</a>, add me on <a href="#">LinkedIn</a>, or send me an email through my <a href="contact.html">contact</a> page.
+                <p>My name is Robert Greenawalt and I'm a Philadelphia based full-stack web developer who creates websites from scratch. I am looking to work in web development because I love designing new things and working in teams. I am looking to shift my career because I think that web development would suit me very well and I love to learn new ideas. Check out some of my work in my <a href="portfolio.html">portfolio</a>, add me on <a href="#">LinkedIn</a>, or send me an email
+                    through my <a href="contact.html">contact</a> page.
                 </p>
-
                 <p>_________________________________________________________________________________</p>
-
-                <br>    
+                <br>
                 <p>robert.greenawalt29@gmail.com</p>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliquam! itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliquam! itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliquam! itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliquam! itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua itae debitis aperiam perferendis id provident dolores laudantium facere doloremque quidem similique sint quisquam ea, doloribus non earum blanditiis. Placeat, aliqua</p>
             </div>
-
         </div>
-
     </div>
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <!-- Footer-------------------------------------------------------------->
 
-    <footer class="footer-1 footer fixed-bottom">
+
+    <footer class="footer">
         <div class="container">
-            <div class="footer-content">
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-                                class="fab fa-linkedin-in"></i></a>
-                    </li>
+            <span class="text-muted">
 
-                    <li>
-                        <a href="https://twitter.com/_broccoli_rob_" target="_blank" ><i class="fab fa-twitter"></i>
-                    </li>
+                <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
 
-                </ul>
-            </div>
+                <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+
+                <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
+            </span>
         </div>
     </footer>
-
     <!-------------------------------------------------- End Footer ----------------------------->
-
 </body>
 
 </html>
