--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio | Robert Greenawalt</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -25,11 +25,11 @@
     <!-- Nav bar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html"><a><img class ="logo" src="favicon.png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="index.html"><img class="logo" src="favicon.png" alt="my logo">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button></a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
 
@@ -42,49 +42,61 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
-
             </ul>
         </div>
     </nav>
 
 
 
-    <!-- End Nav bar -->
+    <!-- End Nav bar ------------------------------------------------------------------------------->
+
     <div class="container">
         <div class="row row-cols-1 row-cols-md-2">
             <div class="col mb-4">
                 <div class="card">
-                    <a href="https://rsg71.github.io/MyFirst-HTML/" target="_blank"><img src="https://rsg71.github.io/MyFirst-HTML/key%20west.jpg" class="card-img-top card-1" alt="first website"></a>
+                    <a href="https://rsg71.github.io/MyFirst-HTML/" target="_blank"><img
+                            src="https://rsg71.github.io/MyFirst-HTML/key%20west.jpg" class="card-img-top card-1"
+                            alt="first website"></a>
                     <div class="card-body">
                         <h5 class="card-title">My First Website</h5>
-                        <p class="card-text">This is the first website I created; it will be undergoing future changes as I develop further</p>
+                        <p class="card-text">This is the first website I created; it will be undergoing future changes
+                            as I develop further</p>
                     </div>
                 </div>
             </div>
             <div class="col mb-4">
                 <div class="card">
-                    <a href="https://rsg71.github.io/Code-refactor/" target="_blank"><img src="digital-marketing-meeting.jpg" class="card-img-top" alt="second website for digital marketing company"></a>
+                    <a href="https://rsg71.github.io/Code-refactor/" target="_blank"><img
+                            src="digital-marketing-meeting.jpg" class="card-img-top"
+                            alt="second website for digital marketing company"></a>
                     <div class="card-body">
                         <h5 class="card-title">Horiseon Social Solution Services</h5>
-                        <p class="card-text">This is a website whose code I edited to include semantic element tags; thereby improving SEO performance and increases accessibility</p>
+                        <p class="card-text">This is a website whose code I edited to include semantic element tags;
+                            thereby improving SEO performance and increases accessibility</p>
                     </div>
                 </div>
             </div>
             <div class="col mb-4">
                 <div class="card">
-                    <a href="#" target="_blank"><img src="https://i.picsum.photos/id/1076/4835/3223.jpg?hmac=sw_W2oBUV1Pp_QwMbkODYHgWlX-SOkVRatS_UErh64Q" class="card-img-top" alt="coming soon image"></a>
+                    <a href="#" target="_blank"><img
+                            src="https://i.picsum.photos/id/1076/4835/3223.jpg?hmac=sw_W2oBUV1Pp_QwMbkODYHgWlX-SOkVRatS_UErh64Q"
+                            class="card-img-top" alt="coming soon image"></a>
                     <div class="card-body">
                         <h5 class="card-title">Coming Soon</h5>
-                        <p class="card-text"> This is a future project that I have not yet completed. I will be filling out links to new websites as the class progresses.</p>
+                        <p class="card-text"> This is a future project that I have not yet completed. I will be filling
+                            out links to new websites as the class progresses.</p>
                     </div>
                 </div>
             </div>
             <div class="col mb-4">
                 <div class="card">
-                    <a href="#" target="_blank"><img src="https://i.picsum.photos/id/249/3000/2000.jpg?hmac=U2oOCXdXUwt6ftKMC4icF6eS8dGDUZJM_0-qi0JEqjk" class="card-img-top" alt="coming soon image"></a>
+                    <a href="#" target="_blank"><img
+                            src="https://i.picsum.photos/id/249/3000/2000.jpg?hmac=U2oOCXdXUwt6ftKMC4icF6eS8dGDUZJM_0-qi0JEqjk"
+                            class="card-img-top" alt="coming soon image"></a>
                     <div class="card-body">
                         <h5 class="card-title">Coming Soon</h5>
-                        <p class="card-text">This is a future project that I have not yet completed. I will be filling out links to new websites as the class progresses./p>
+                        <p class="card-text">This is a future project that I have not yet completed. I will be filling
+                            out links to new websites as the class progresses.</p>
                     </div>
                 </div>
             </div>
@@ -93,28 +105,23 @@
 
 
 
-    <footer class="footer-1 fixed-bottom">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <!-- Footer-------------------------------------------------------------->
+
+    <footer class="footer footer-portfolio">
         <div class="container">
-            <div class="footer-content">
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-                                class="fab fa-linkedin-in"></i></a>
-                    </li>
-                    
-                    <li>
-                        <a href="https://twitter.com/_broccoli_rob_" target="_blank" ><i class="fab fa-twitter"></i>
-                    </li>
-                </ul>
-            </div>
+            <span class="text-muted">
+                <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
+                <i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
+            </span>
         </div>
     </footer>
-
-
-
+    <!-------------------------------------------------- End Footer ----------------------------->
 </body>
-
 </html>
