--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button></a>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <header class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
 
                 <li class="nav-item active">
@@ -42,34 +42,34 @@
                 </li>
 
             </ul>
-        </div>
+        </header>
     </nav>
 
 
     <!-- End Nav bar -------------------------------------------------------------------------------->
 
-    <div class="container">
+    <main class="container">
         <br>
         <br>
         <h1>Contact</h1>
-        <form>
-            <div class="form-group">
+        <section>
+            <form class="form-group">
                 <label for="exampleFormControlInput1">Name:</label>
                 <input type="name" class="form-control" class="exampleFormControlInput1" placeholder="John Doe">
-            </div>
-            <div class="form-group">
+            </form>
+            <form class="form-group">
                 <label for="exampleFormControlInput1">Email address:</label>
                 <input type="email" class="form-control" class="exampleFormControlInput1"
                     placeholder="name@example.com">
-            </div>
+            </form>
 
-            <div class="form-group">
+            <form class="form-group">
                 <label for="exampleFormControlTextarea1">Inquiry/Questions/Comments:</label>
                 <textarea class="form-control" class="exampleFormControlTextarea1" rows="8"></textarea>
-            </div>
-        </form>
+            </form>
+        </section>
         <input class="btn btn-dark" type="submit" value="Submit">
-    </div>
+    </main>
     <br>
     <br>
     <br>
