--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button></a>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <header class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
 
                 <li class="nav-item active">
@@ -44,18 +44,18 @@
                 </li>
 
             </ul>
-        </div>
+        </header>
     </nav>
 
     <!-- End Nav bar ------------------------------------------------------->
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
+    <main class="container container-fluid">
+        <section class="row">
+            <section class="col-md-6">
                 <img src="headshot-updated-removebg-preview2.png" alt="headshot of Robert" class="headshot">
-            </div>
+            </section>
 
-            <div class="col-md-6">
+            <section class="col-md-6">
                 <br>
                 <br>
                 <br>
@@ -68,9 +68,9 @@
                 <p>_________________________________________________________________________________</p>
                 <br>
                 <p>robert.greenawalt29@gmail.com</p>
-            </div>
-        </div>
-    </div>
+            </section>
+        </section>
+    </main>
     <br>
     <br>
     <br>
