--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button></a>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <header class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
 
                 <li class="nav-item active">
@@ -43,65 +43,65 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
-        </div>
+        </section>
     </nav>
 
 
 
     <!-- End Nav bar ------------------------------------------------------------------------------->
 
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-2">
-            <div class="col mb-4">
-                <div class="card">
+    <main class="container">
+        <section class="row row-cols-1 row-cols-md-2">
+            <section class="col mb-4">
+                <figure class="card">
                     <a href="https://rsg71.github.io/MyFirst-HTML/" target="_blank"><img
                             src="https://rsg71.github.io/MyFirst-HTML/key%20west.jpg" class="card-img-top card-1"
                             alt="first website"></a>
-                    <div class="card-body">
+                    <figure class="card-body">
                         <h5 class="card-title">My First Website</h5>
                         <p class="card-text">This is the first website I created; it will be undergoing future changes
                             as I develop further</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card">
+                    </figure>
+                </figure>
+            </section>
+            <section class="col mb-4">
+                <figure class="card">
                     <a href="https://rsg71.github.io/Code-refactor/" target="_blank"><img
                             src="digital-marketing-meeting.jpg" class="card-img-top"
                             alt="second website for digital marketing company"></a>
-                    <div class="card-body">
+                    <figure class="card-body">
                         <h5 class="card-title">Horiseon Social Solution Services</h5>
                         <p class="card-text">This is a website whose code I edited to include semantic element tags;
                             thereby improving SEO performance and increases accessibility</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card">
+                    </figure>
+                </figure>
+            </section>
+            <section class="col mb-4">
+                <figure class="card">
                     <a href="#" target="_blank"><img
                             src="https://i.picsum.photos/id/1076/4835/3223.jpg?hmac=sw_W2oBUV1Pp_QwMbkODYHgWlX-SOkVRatS_UErh64Q"
                             class="card-img-top" alt="coming soon image"></a>
-                    <div class="card-body">
+                    <figure class="card-body">
                         <h5 class="card-title">Coming Soon</h5>
                         <p class="card-text"> This is a future project that I have not yet completed. I will be filling
                             out links to new websites as the class progresses.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card">
+                    </figure>
+                </figure>
+            </section>
+            <section class="col mb-4">
+                <figure class="card">
                     <a href="#" target="_blank"><img
                             src="https://i.picsum.photos/id/249/3000/2000.jpg?hmac=U2oOCXdXUwt6ftKMC4icF6eS8dGDUZJM_0-qi0JEqjk"
                             class="card-img-top" alt="coming soon image"></a>
-                    <div class="card-body">
+                    <figure class="card-body">
                         <h5 class="card-title">Coming Soon</h5>
                         <p class="card-text">This is a future project that I have not yet completed. I will be filling
                             out links to new websites as the class progresses.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                    </figure>
+                </figure>
+            </section>
+        </section>
+    </main>
 
 
 
