changing containers back to regular containers

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
     <!-- End Nav bar -------------------------------------------------------------------------------->
 
-    <main class="container-fluid">
+    <main class="container">
         <br>
         <br>
         <h1>Contact</h1>
@@ -79,7 +79,7 @@
     <!-- Footer-------------------------------------------------------------->
 
     <footer class="footer">
-        <div class="container-fluid">
+        <div class="container">
             <span class="text-muted">
                 <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i
                         class="fab fa-instagram"></i></a>
