--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 
     <!-- End Nav bar ------------------------------------------------------------------------------->
 
-    <main class="container-fluid">
+    <main class="container">
         <section class="row row-cols-1 row-cols-md-2">
             <section class="col mb-4">
                 <figure class="card">
@@ -113,7 +113,7 @@
     <!-- Footer-------------------------------------------------------------->
 
     <footer class="footer footer-portfolio">
-        <div class="container-fluid">
+        <div class="container">
             <span class="text-muted">
                 <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
                 <i class="fab fa-instagram"></i></a>
