--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- End Nav bar ------------------------------------------------------->
 
-    <main class="container-fluid">
+    <main class="container">
         <section class="row">
             <section class="col-md-6">
                 <img src="headshot-updated-removebg-preview2.png" alt="headshot of Robert" class="headshot">
@@ -82,7 +82,7 @@
 
 
     <footer class="footer">
-        <div class="container-fluid">
+        <div class="container">
             <span class="text-muted">
 
                 <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i
