changing picture in portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
             <section class="col mb-4">
                 <figure class="card">
                     <a href="https://rsg71.github.io/MyFirst-HTML/" target="_blank"><img
-                            src="https://rsg71.github.io/MyFirst-HTML/key%20west.jpg" class="card-img-top card-1"
+                        src="key-west.jpg" class="card-img-top card-1"
                             alt="first website"></a>
                     <figure class="card-body">
                         <h5 class="card-title">My First Website</h5>
