--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
     <!-- End Nav bar -------------------------------------------------------------------------------->
 
-    <main class="container">
+    <main class="container contact">
         <br>
         <br>
         <h1>Contact</h1>
@@ -70,23 +70,23 @@
         </section>
         <input class="btn btn-dark" type="submit" value="Submit">
     </main>
+    <!-- <br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
+    <br> -->
 
     <!-- Footer-------------------------------------------------------------->
 
     <footer class="footer">
         <div class="container">
-            <span class="text-muted">
+            <div class="footer-links">
                 <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i
                         class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
                         class="fab fa-linkedin-in"></i></a>
                 <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i>
-            </span>
+            </div>
         </div>
     </footer>
     <!-------------------------------------------------- End Footer ----------------------------->
