--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- End Nav bar ------------------------------------------------------->
 
-    <main class="container">
+    <main class="container home">
         <section class="row">
             <section class="col-md-6">
                 <img src="headshot-updated-removebg-preview2.png" alt="headshot of Robert" class="headshot">
@@ -71,19 +71,13 @@
             </section>
         </section>
     </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
+    
     <!-- Footer-------------------------------------------------------------->
 
 
     <footer class="footer">
         <div class="container">
-            <span class="text-muted">
+            <div class="footer-links">
 
                 <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i
                         class="fab fa-instagram"></i></a>
@@ -92,7 +86,7 @@
                         class="fab fa-linkedin-in"></i></a>
 
                 <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
-            </span>
+            </div>
         </div>
     </footer>
     <!-------------------------------------------------- End Footer ----------------------------->
