--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 
     <!-- End Nav bar ------------------------------------------------------------------------------->
 
-    <main class="container">
+    <main class="container portfolio">
         <section class="row row-cols-1 row-cols-md-2">
             <section class="col mb-4">
                 <figure class="card">
@@ -114,12 +114,12 @@
 
     <footer class="footer footer-portfolio">
         <div class="container">
-            <span class="text-muted">
+            <div class="footer-links">
                 <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
                 <i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
-            </span>
+            </div>
         </div>
     </footer>
     <!-------------------------------------------------- End Footer ----------------------------->
