--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/63824e3d3e.js" crossorigin="anonymous"></script>
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
+    <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
 
     <!-- Css link for footer-->
     <link rel="stylesheet" href="style.css">
