--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
+    <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
 
     <title>Contact | Robert Greenawalt</title>
 
