adding more projects to portfolio

--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,7 @@
     <!-- End Nav bar -------------------------------------------------------------------------------->
 
     <main class="container contact">
-        <br>
-        <br>
-        <h1>Contact</h1>
+        <h1>Contact</h1 class="mt-3">
         <section>
             <form class="form-group">
                 <label for="exampleFormControlInput1">Name:</label>
@@ -80,18 +78,18 @@
     
 
     <!-- Footer-------------------------------------------------------------->
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-links">
-                <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank"><i
-                        class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
-                        class="fab fa-linkedin-in"></i></a>
-                <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i>
-            </div>
-        </div>
-    </footer>
+<!-- 
+    <footer class="footer footer-portfolio">
+      <div class="container">
+          <div class="footer-links">
+              <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
+                  <i class="fab fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank"><i
+                      class="fab fa-linkedin-in"></i></a>
+              <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
+          </div>
+      </div>
+  </footer> -->
 
     <!-------------------------------------------------- End Footer ----------------------------->
 
