--- a/portfolio.html
+++ b/portfolio.html
@@ -79,12 +79,45 @@
             </section>
             <section class="col mb-4">
                 <figure class="card">
-                    <a href="#" target="_blank"><img
-                            src="https://i.picsum.photos/id/1076/4835/3223.jpg?hmac=sw_W2oBUV1Pp_QwMbkODYHgWlX-SOkVRatS_UErh64Q"
+                    <a href="https://rsg71.github.io/Password-Generator-Robert-Greenawalt/" target="_blank"><img
+                            src="imgs/Password-generator.PNG"
                             class="card-img-top" alt="coming soon image"></a>
                     <figure class="card-body">
-                        <h5 class="card-title">Coming Soon</h5>
-                        <p class="card-text"> This is a future project that I have not yet completed. I will be filling
+                        <h5 class="card-title">Password Generator</h5>
+                        <p class="card-text"> A simple password generator that takes an input for character length and inclusion of various types of characters, and returns a randomly generated password to the user</p>
+                    </figure>
+                </figure>
+            </section>
+            <section class="col mb-4">
+                <figure class="card">
+                    <a href="https://rsg71.github.io/Code_Quiz-Robert_Greenawalt/" target="_blank"><img
+                            src="imgs/code-quiz.PNG"
+                            class="card-img-top" alt="coming soon image"></a>
+                    <figure class="card-body">
+                        <h5 class="card-title">Code Quiz</h5>
+                        <p class="card-text">Test your Javascript knowledge with this short code quiz; save your high scores and try to beat your personal best</p>
+                    </figure>
+                </figure>
+            </section>
+            <section class="col mb-4">
+                <figure class="card">
+                    <a href="https://rsg71.github.io/Work-Scheduler/" target="_blank"><img
+                            src="imgs/work-scheduler.PNG"
+                            class="card-img-top card-1" alt="coming soon image"></a>
+                    <figure class="card-body">
+                        <h5 class="card-title">Work Scheduler</h5>
+                        <p class="card-text">A 9-5 work schedule that changes color dynamically; grey is past, red is the current hour, and green is the future</p>
+                    </figure>
+                </figure>
+            </section>
+            <section class="col mb-4">
+                <figure class="card">
+                    <a href="https://rsg71.github.io/Weather-App/" target="_blank"><img
+                            src="imgs/weather-app.PNG"
+                            class="card-img-top" alt="coming soon image"></a>
+                    <figure class="card-body">
+                        <h5 class="card-title">Weather App</h5>
+                        <p class="card-text">This is a future project that I have not yet completed. I will be filling
                             out links to new websites as the class progresses.</p>
                     </figure>
                 </figure>
@@ -92,12 +125,11 @@
             <section class="col mb-4">
                 <figure class="card">
                     <a href="#" target="_blank"><img
-                            src="https://i.picsum.photos/id/249/3000/2000.jpg?hmac=U2oOCXdXUwt6ftKMC4icF6eS8dGDUZJM_0-qi0JEqjk"
+                            src="imgs/brewery-finder.PNG"
                             class="card-img-top" alt="coming soon image"></a>
                     <figure class="card-body">
-                        <h5 class="card-title">Coming Soon</h5>
-                        <p class="card-text">This is a future project that I have not yet completed. I will be filling
-                            out links to new websites as the class progresses.</p>
+                        <h5 class="card-title">Brewery Finder Project</h5>
+                        <p class="card-text">Search by state and select brewery type to find a list of breweries</p>
                     </figure>
                 </figure>
             </section>
@@ -112,7 +144,7 @@
     <br>
     <!-- Footer-------------------------------------------------------------->
 
-    <footer class="footer footer-portfolio">
+    <!-- <footer class="footer footer-portfolio">
         <div class="container">
             <div class="footer-links">
                 <a href="https://www.instagram.com/robert.greenawalt29/" target="_blank">
@@ -122,7 +154,7 @@
                 <a href="https://twitter.com/_broccoli_rob_" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-------------------------------------------------- End Footer ----------------------------->
 
 
