updating homepage formatting

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,8 @@
                 <textarea class="form-control" class="exampleFormControlTextarea1" rows="8"></textarea>
             </form>
         </section>
-        <input class="btn btn-dark" type="submit" value="Submit">
+        <button id="contact-submit-button" class="btn btn-dark" type="submit" value="Submit"><a id="contact-submit-link" href="mailto:robert.greenawalt29@gmail.com">Submit</a></button>
+      
     </main>
     <br>
     <br>
