--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
             </section>
             <section class="col mb-4">
                 <figure class="card">
-                    <a href="#" target="_blank"><img
+                    <a href="https://lambaa94.github.io/Brewery-Finder/" target="_blank"><img
                             src="imgs/brewery-finder.PNG"
                             class="card-img-top" alt="coming soon image"></a>
                     <figure class="card-body">
