--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
     <section class="row">
-      <section class="col-sm-3 col-lg-12">
+      <section>
         <img src="imgs/headshot-white-background.png" id="headshot" alt="headshot of Robert" class="headshot mx-auto img-responsive">
       </section>
 
